# FROST-DAY

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yml
CHANGELOG/: 0.0.1.md
app/: .gitignore  DOCUMENTATION.md  PLAN.md  README.md  app.py  diagnose_catalogue.py  download_all.py  frost_validation.py  generate_validation.py  requirements.txt  utils.py  verifier_validation.py
app/frost_days/: __init__.py  cache.py  config.py  departments.py  distance.py  frost_calculator.py  geo_api.py  public_data_client.py  stations.py  statistics.py
app/notebooks/: data_quality.ipynb
app/tests/: test_distance.py  test_frost_calculator.py  test_public_data_client.py  test_statistics.py
app/validation/: Digne-les-Bains_04_complete.csv  Marseille_13_complete.csv  Paris_75_complete.csv  city_df_complete.csv  stations_df_complete.csv
docs/: api.md  index.md  installation.md  usage.md
scripts/notebooks/: test.ipynb
src/: data_loader.py  download.py  geo.py
src/frost_day/: __init__.py  cli.py
tests/: test_frost_day.py
